Design Changed(エラーページ作成)

--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,9 @@
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+
   <style>
+
   body {
     background-color: #EFEFEF;
     color: #2E2F30;
@@ -20,10 +22,7 @@
 
   div.dialog > div {
     border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
+    border-top: #black solid 4px;
     border-top-left-radius: 9px;
     border-top-right-radius: 9px;
     background-color: white;
@@ -33,7 +32,12 @@
 
   h1 {
     font-size: 100%;
-    color: #730E15;
+    color: #black;
+    line-height: 1.5em;
+  }
+  p {
+    font-size: 100%;
+    color: #black;
     line-height: 1.5em;
   }
 
@@ -52,6 +56,7 @@
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
   </style>
+
 </head>
 
 <body>
@@ -59,9 +64,11 @@
   <div class="dialog">
     <div>
       <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <p>Error code:404</p>
+      <p>We're sorry...</p>
+      <p>Stay tuned...Here is <a href="http://www.stylatte.com">STYLATTE</a> top page.</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
+
 </body>
 </html>
